--- a/sections/Analyse/SystemDescription/MI.tex
+++ b/sections/Analyse/SystemDescription/MI.tex
@@ -205,6 +205,8 @@ distributions
   \item $P(O_t|S_t)$ - specifies the sensor model
 \end{itemize}
 
+This kind of model could be useful for \name in the sense that it makes it
+possible to say something about future states. 
 
 \subsubsection{Learning}
 
