- Added a new picture  - Changed which picture is used in the problem domain

--- a/sections/Requirements/ProblemDomain.tex
+++ b/sections/Requirements/ProblemDomain.tex
@@ -40,10 +40,10 @@ The turret stops sensing the target and start scanning the area again.
 }
 \end{center}
 
-This scenario can be visualized with \autoref{richPic} which shows process of
+This scenario can be visualized with \autoref{turretScenario} which shows process of
 finding and shooting a target.
 
-\figx[0.45]{richPic}{A representation of the ideal scenario.}
+\figx[0.45]{turretScenario}{A representation of the ideal scenario.}
 
 \section{Phases}
 Based on the ideal scenario three distrinct phases are identified,
