- Fixed some small things

--- a/sections/Analyse/SystemDescription/Conclusion.tex
+++ b/sections/Analyse/SystemDescription/Conclusion.tex
@@ -7,11 +7,12 @@ contraints imposed by such a system. By using a hardware platform such as Arduin
 this would be sufficient, since the platforms restrict on the basis of computing power,
 size and memory. Cost isn't a factor at this point since the university provides the platform,
 and the project isn't meant to be mass-produced.
-\subsubsection{RTS}
+\subsubsection{Real-Time Systems}
 Although this project group will focus on the Machine Intelligence, the project still has
 some inherit RTS elements, such as deadlines and scheduling of task
-\subsubsection{MI}
+\subsubsection{Machine Intelligence}
 
+\fix{}{conclusion inside of conclusion}
 \subsection{Conclusion}
 Relative to an embedded system, the turret will be
 \begin{itemize}
@@ -22,4 +23,4 @@ Relative to an embedded system, the turret will be
   \item Reactive - The turret senses an area and if a certain input is received it will react on it and try to fire a projectile
   in order to hit a target. Hence the system is reactionary
 \end{itemize}
-In terms of RTS
+% In terms of RTS
