--- a/sections/Sensors/SensorTest.tex
+++ b/sections/Sensors/SensorTest.tex
@@ -1,4 +1,4 @@
-\section{Sensor Testing}
+\section{Sensor Testing}\label{SensorTest}
 The two sensors used on the turret both have datasheets with technical
 documentation, but in order to verify this information, and to gain a
 deeper understanding of how to use these sensors, this section will be used to
