--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -1,5 +1,5 @@
 \section{Requirements}
-
+See version 2 down below
 Based on\ldots, we can determine the requirements for an autonomous
 turret.
 These requirements can further be divided into the groups ``Need to have'' and
@@ -63,80 +63,52 @@ amount of targets hit.
   more realistic scenario, the target should be able to speed up and slow down.
 \end{itemize}
 
-\section{Features and Requirements v2}
+\section{Features and Requirements}
 
-Based on\ldots, we can determine the features and requirements for an autonomous
-turret. These can further be divided into the groups ``Need to have'' and
-``Nice to have'' in order to prioritize between them.
+Based on the previous analysis, we can determine the features and requirements
+for an autonomous turret.\fix{needs some sort of intro}{}
 
-\subsection{}
 The following features and requirements are necessary for an autonomous turret:
 \begin{itemize}
   \item The turret needs to be an embedded system and incorparate elements from
-the fields of machine intelligence and real-time systems. This leads to the
-following requirement:
-\begin{itemize}
-  \item The system needs to use to Lego Nxt 2.0 as the embedded system.
-\end{itemize}
+  the fields of machine intelligence and real-time systems. This leads to the
+  following requirement:
+  \begin{itemize}
+    \item The system needs to use to Lego Nxt 2.0 as the embedded
+    system.\fix{Might need some more explanation}{}
+  \end{itemize}
   \item The Turret needs to be able to hit a moving target. This leads to the
   following requirements:
   \begin{itemize}
-    \item In order to allow the turret to easier hit a moving target, it needs
-    to be able to turn. 
-    \item The turret needs to be able turn a minimum of 90 degrees. Since the
-    turret should monitor an area and be able to hit a moving target, it needs
-    to be able to turn. If it is not able to turn, line of sight as well as the
-    timing in order to hit a target will be severely limited. In regards to how
-    far it should be able to turn, a minimum is set to 90 degrees, as this will
-    provide a decent sized area in front of the turret.
-    \item The turret needs to be able to sense a target at a range of atleast
-    250cm, since the \fix{current available sensors have a maximum range of
-    255cm}{Should be changed depending on max range of optical}, as long as the
-    lighting is good and the target is suitable.
-    \item The turret needs to be able to search for targets, as otherwise it
-    would have to wait for a target to move into its line of sight. This would
-    limit the window of time the turret has in order to hit the target.
+    \item The turret needs to be able turn. Since the turret should monitor an
+    area and be able to hit a moving target, it needs to be able to turn. If it
+    is not able to turn, line of sight as well as the timing in order to hit a
+    target will be severely limited. In regards to how far it should be able to
+    turn, a minimum is set to 90 degrees, as this will provide a decent sized
+    area in front of the turret.
+    \item In order to perceive the target without receiving information from an
+    outside source, the turret will need to be able to sense the target. Based
+    on the results from the sensor tests, \autoref{SensorTest}, the sensors will
+    be able to see 250 cm.    
+    \item The turret needs to be able to shoot in order to hit a
+    target.\fix{I might need a basis for max range}{}
+    
+    \fix{The turret should have a maximum firing range of atleast 250cm.
+    This number is determined by the maximum sensor range as well as the maximum of
+    the design. It can be argued that it could be useful to shoot further than
+    what the turret can see, but this is not a necessary feature.}{Needs to be
+    updated/changed to the above.}
+    \item As turret needs to be able to hit a moving target, it is not enough
+    to hit the target sometimes, the turret should be able to hit it reliably.
+    It should be able to hit a moving target atleast 80\% of the time.
   \end{itemize}  
-\item The target needs to move fast enough such that the turret is unable to
-hit it, without calculating a firing offset.
-\end{itemize}
-
-\subsection{Need to Have}
-The following requirements have been deemed necessary for an autonomous turret:
-
-Features:                       Requirementss:
-Embedded systems                ---> Use nxt
-
-Hit moving targets              ---> Turn
-                                ---> Firing offset
-                                ---> Sensor
-                                ---> Accuracy
-
-Target requires firing offset   ---> Target specs
-
-
-\subsubsection{Requirements}
-\begin{itemize}
-  \item The turret needs to be an embedded system and incorparate elements from
-the fields of machine intelligence and real-time systems. This is necessary as
-it is required by the semester.
-  \item The Turret needs to be able to hit a moving target. This requirement is
-taken from straight from the project proposal and can be considered vital to the
-success of the project.
-\item The target needs to move fast enough such that the turret is unable to
-hit it, without calculating a firing offset. This requirement is also a taken
-straight from the project proposal.
-\end{itemize}
-
-\subsubsection{Features}
-\begin{itemize}
-  \item The turret needs to be able turn a minimum of 90 degrees. Since the
-turret should monitor an area and be able to hit a moving target, it needs to
-be able to turn. If it is not able to turn, line of sight as well as the
-timing in order to hit a target will be severely limited. In regards to how
-far it should be able to turn, a minimum is set to 90 degrees, as this will
-provide a decent sized area in front of the turret.
-\item Firing range
-\item Sensing range
-\item Accuracy
-\end{itemize}
+  \item The target needs to move fast enough such that the turret is unable to
+  hit it, without calculating a firing offset. This leads to the following
+  requirements:
+  \begin{itemize}
+    \item target specification
+    \item In order to hit a moving a target
+    \item Turret needs to be able to predict the position of the target in order
+    to c
+  \end{itemize}
+  \end{itemize}
