- Added small stuff

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -16,11 +16,11 @@ evaluate the platforms on:
 \end{enumerate}
 
 \section{Lego NXT Mindstorms}
-The Lego NXT Mindstorms is the successor to the first robotics-platform
-released by Lego the Robotics Invention System. Although the NXT line also
-contains 2 other platforms the NXT 1.0 and the EV3, in this project only the
+\fix{The Lego NXT Mindstorms is the successor to the first robotics-platform
+released by Lego the Robotics Invention System.}{Start of sales talk} Although
+the NXT line also contains 2 other platforms the NXT 1.0 and the EV3, in this project only the
 NXT 2.0 will be considered since this is the platform being offered by the
-university.\nl
+university \Source.\nl
 
 The Lego NXT Mindstorms kit consists of the NXT brick and a set of
 compatible sensors and actuators. The NXT brick\citep[P.70]{NXTStats} consists
