--- a/sections/Introduction.tex
+++ b/sections/Introduction.tex
@@ -1,16 +1,21 @@
 \chapter{Introduction}
 Computers have become an integral part of modern society, not just as personal
-computers or server stations, but also in the most minute of electronic devices
+computers or servers, but also in the most minute of electronic devices
 like kitchen appliances and radiator thermostats. This entire class of minute
 computers surrounds us in much greater numbers than ever before, although their
-presence is a lot more incognito. These computers are built into larger
-electronic devices. This class of computer systems is also known as Embedded
-Systems.\nl
+presence is not as noticeable as for example a PC. These computers are built
+into a large part of all electronic devices. This class of computer systems is
+also known as Embedded Systems.\nl
 
-The theme of this semester is Embedded systems. This means that the focus of
-the project will be working with a set of constraints that must be balanced.
-Furthermore the project should include techniques from the machine intelligence
-course and the real-time systems course.
+In this project we will focus on Embedded systems and end up with a physical
+product which is controlled using an Embedded system. This presents some issues
+as there is a limited amount of memory and processing power. Therefore, this
+project will also be focused on optimizing the software. Furthermore this
+project will include aspects from machine intelligence and real time systems. 
+% The theme of this semester is Embedded systems. This means that the focus of
+% the project will be working with a set of constraints that must be balanced.
+% Furthermore the project should include techniques from the machine intelligence
+% course and the real-time systems course.
 
 \section{Initial Problem}
 A recurring project proposal idea is a challenge proposed by the semester coordinator Ren\'e
