--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -1,51 +1,52 @@
 \section{Features and Requirements}
-
-Based on the analysis, we can determine the features and requirements
-for an autonomous turret.\fix{needs some sort of intro}{}
+In this section we w  ill define the features and requirements for the turret,
+the features and requirements will be based on the analysis in the previous
+chapters.\nl
 
 The following features and requirements are necessary for an autonomous turret:
 \begin{itemize}
-  \item The turret needs to be an embedded system and incorparate elements from
-  the fields of machine intelligence and real-time systems. This leads to the
+  \item The turret needs to be an embedded system and incorporate elements from
+  the fields of machine intelligence and real time systems. This leads to the
   following requirement:
   \begin{itemize}
-    \item The system needs to use to Lego Nxt 2.0 as the embedded
-    system.\fix{Might need some more explanation}{}
+    \item The system needs to use the Lego NXT as the embedded
+    system. This platform is chosen based on the findings in
+    \autoref{PlatformC}. 
   \end{itemize}
   \item The Turret needs to be able to hit a moving target. This leads to the
   following requirements:
   \begin{itemize}
-    \item The turret needs to be able turn. Since the turret should monitor an
-    area and be able to hit a moving target, it needs to be able to turn. If it
-    is not able to turn, line of sight as well as the timing in order to hit a
-    target will be severely limited. In regards to how far it should be able to
-    turn, a minimum is set to 90 degrees, as this will provide a decent sized
-    area in front of the turret.
+    \item Since the turret should monitor an area and be able to hit a moving
+    target, it needs to be able to turn. If it is not able to turn, line of
+    sight as well as the timing in order to hit a target will be severely
+    limited. In regards to how far it should be able to turn, a minimum is set
+    to 90 degrees, as this will provide a decent sized area in front of the turret.
     \item In order to perceive the target without receiving information from an
     outside source, the turret will need to be able to sense the target. Based
-    on the results from the sensor tests, \autoref{SensorTest}, the sensors will
-    be able to see 250 cm.    
+    on the results from the sensor tests, see \autoref{SensorTest}, the sensors
+    will be able to see approximately 200 cm.    
     \item The turret needs to be able to shoot in order to hit a
-    target.\fix{I might need a basis for max range}{}
+    target. This has to be done within a range of 200 cm as it is the max
+    capability of the sensors. 
     
-    \fix{The turret should have a maximum firing range of atleast 250cm.
-    This number is determined by the maximum sensor range as well as the maximum of
-    the design. It can be argued that it could be useful to shoot further than
-    what the turret can see, but this is not a necessary feature.}{Needs to be
-    updated/changed to the above.}
+%     \fix{The turret should have a maximum firing range of atleast 250cm.
+%     This number is determined by the maximum sensor range as well as the maximum of
+%     the design. It can be argued that it could be useful to shoot further than
+%     what the turret can see, but this is not a necessary feature.}{Needs to be
+%     updated/changed to the above.}
   \end{itemize}  
   \item The target needs to move fast enough such that the turret is unable to
   hit it, without calculating a firing offset. This leads to the following
   requirements:
   \begin{itemize}
     \item In addition to the target moving fast enough to require a firing
-    offset, the target also needs to move on an even plane and with constant
+    offset, the target also needs to move on an even plane and with a constant
     speed. These two additional requirements are needed to ensure that there are
     as few factors as possible that are not accounted for in the scenario.
     \item The turret needs to be able to calculate the firing offset to ensure
     a high accuracy. It is not enough to hit the target sometimes, the turret
     should be able to hit it reliably. It should be able to hit a moving target
-    atleast 80\% of the time.
+    at least 80\% of the time.
   
   \end{itemize}
   \end{itemize}
