--- a/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
+++ b/sections/Analyse/SystemDescription/EmbeddedSystemsOverview.tex
@@ -11,11 +11,14 @@ intelligence could be used by an autonomous turret.
 As explained by the embedded systems manufacturer BarrGroup
 \citep{Barr_Embedded}, an embedded system is: \nl
 
-\begin{center}{\textit{``A combination
-of computer hardware and software, and perhaps additional mechanical or other
-parts, designed to perform a dedicated function. In some cases, embedded systems
-are part of a larger system or product, as in the case of an antilock braking
-system in a car.''}}\end{center}\nl
+\begin{center}
+\begin{minipage}{0.8\linewidth}
+\textit{A combination of computer hardware and software, and perhaps additional
+mechanical or other parts, designed to perform a dedicated function. In some
+cases, embedded systems are part of a larger system or product, as in the case
+of an antilock braking system in a car.}
+\end{minipage}
+\end{center}
 % An embedded system is a device with limited resources both in terms of computing
 % power and how much memory it has available. They are used everywhere to do small
 % task and jobs. \fix{It is difficult to give an exact definition of what an
