--- a/sections/Analyse/SystemDescription/RTS.tex
+++ b/sections/Analyse/SystemDescription/RTS.tex
@@ -1,21 +1,23 @@
 \section{Real-Time Systems}
-Although the project group does not have any members following the Real-Time
-Systems (RTS) course, the project still incorporates certain elements from RTS.
-In this section a quick overview of the elements will be described in order to provide a basic
-understanding in relation to the project.
+In order to have a proper foundation of the core concepts in the field of
+real-time systems, we will give our own definition of what a real-time systems
+is:
 
-In order to give a proper foundation of the core concepts in the field of RTS,
-we will give our definition of real time systems. \nl
+\begin{center}
+\begin{minipage}{0.8\linewidth}
+\textit{A real time system is any information processing system, which needs to
+react within a finite time period to externally generated inputs to meet its
+deadlines.}
+\end{minipage}
+\end{center}
 
-We define a real time system as follows:\nl
 
-\say{A real time system is any information processing system,
-which needs to react within a finite time period to externally generated inputs
-to meet its deadlines
-% Within real time systems there are two important distinctions, namely hard- and soft real
-% time systems. A hard real time system is a system where it is critical to meet
-% deadlines, whereas a soft real time system it is not.
-} \nl
+
+% Although the project group does not have any members following the Real-Time
+% Systems (RTS) course, the project still incorporates certain elements from RTS.
+% In this section a quick overview of the elements will be described in order to provide a basic
+% understanding in relation to the project.
+
 
 \subsection{Timeliness}
 Timeliness is an important term within real time systems. It is defined as being
