--- a/sections/Requirements/Requirements.tex
+++ b/sections/Requirements/Requirements.tex
@@ -1,9 +1,9 @@
 \section{Features and Requirements}
-In this section we w  ill define the features and requirements for the turret,
-the features and requirements will be based on the analysis in the previous
-chapters.\nl
+In this section the features and requirements for this project will be formed,
+this is done based on the analysis in \autoref{PlatformC} and
+\autoref{SensorTest}.
 
-The following features and requirements are necessary for an autonomous turret:
+The following features and requirements where defined for the project:
 \begin{itemize}
   \item The turret needs to be an embedded system and incorporate elements from
   the fields of machine intelligence and real time systems. This leads to the
