PLZ REMEMBER TO MARGE NOT OVERWRITE  - Added fixed to places that might need to be discused to be changed  - Added a lot of source missing  - Changed a duplicate line

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -1,5 +1,4 @@
 \chapter{Platform Choice}\label{PlatformC}
-
 The purpose of this chapter will be to analyse the different hardware platforms available
 and ultimately select one for the project. The platforms to be examined are the
 Lego NXT Mindstorms and Arduino, due to the fact that these are the
@@ -19,16 +18,17 @@ platform for the project will be chosen.
 \end{enumerate}
 
 \section{Lego NXT Mindstorms}
-The Lego NXT Mindstorms is the successor to the first robotics-platform
-released by Lego the Robotics Invention System. Although the NXT product-line contains
-the NXT 1.0, 2.0 and the newer EV3 brick, in this project the
-EV3 will be disregarded since this is the platform being offered by the
+\fix{The Lego NXT Mindstorms is the successor to the first robotics-platform
+released by Lego the Robotics Invention System.}{Sales talk and history which
+if needed, needs a source} Although the NXT product-line contains the NXT 1.0,
+2.0 and the newer EV3 brick, in this project the EV3 will be disregarded since this is the platform being offered by the
 university. Regarding the NXT 1.0 and 2.0 brick, they are in fact identical from a
-hardware perspective and so we will consider them the same in the scope of this project\nl
-\subsection{NXT Hardware specs}
+hardware perspective and so we will consider them the same in the scope of this
+project \Source \nl
 
+\subsection{NXT Hardware specs}
 The Lego NXT Mindstorms kit consists of the NXT brick and a set of
-compatible sensors and actuators. The NXT brick\citep[P.70]{NXTStats} consists
+compatible sensors and actuators. The NXT brick \citep[P.70]{NXTStats} consists
 of:
 
 \begin{itemize}
@@ -40,7 +40,8 @@ of:
 The Lego NXT comes with the NXT-G programming environment which is a visual
 programming language for use with the NXT platform. There exist a variety of
 unofficial programming languages for the NXT, such as michael{leJOS(Java), RobotC(C), nxt-Python(Python-duhh)}
-which makes it possible to write programs using the more popular programming languages.
+which makes it possible to write programs using the more popular programming
+languages \Source.
 
 \begin{itemize}
   \item The external peripherals come programmed and assembled - all the user
@@ -53,16 +54,17 @@ which makes it possible to write programs using the more popular programming lan
 
 \section{Arduino}
 The Arduino was born as a tool for fast prototyping, aimed at people lacking a
-background in electronics and programming. Over the years the arduino has
+background in electronics and programming \Source. Over the years the arduino has
 evolved from offering simple 8-bit boards to offering a variety of different
 boards suiting different needs such as memory available, processing power,
-number of ports on the platform, etc. The arduino comes with its own
-programming language and an IDE. A large number of modules are available for
-the arduino allowing the construction of diverse and complex systems\Source. For the sake
-of comparison we will use the Arduino Uno, since this is the board being offered by
+number of ports on the platform, etc \Source. The arduino comes with its
+own programming language and an IDE. A large number of modules are available for
+the arduino allowing the construction of diverse and complex systems \Source.
+For the sake of comparison we will use the Arduino Uno, since this is the board being offered by
 the university.
 
 \subsection{Arduino Uno specification}
+\Source
 \begin{itemize}
   \item ATmega328P processor 16 MHz clockfrequency
   \item 32 kB Flash storage
@@ -71,27 +73,25 @@ the university.
 
 \begin{itemize}
 	\item Due to the popularity of the arduino platform a large variety of 3rd
-	party peripherals are available for the platform
+	party peripherals are available for the platform \Source
 	\item Due to the popularity of the platform, there is also a large amount of
-	libraries for use with the modules
+	libraries for use with the modules \Source
 	\item If the library doesn't exist or contain the necesary functionality, it
 	will have to be written, thus time will have to be invested in order to make
 	it work
 \end{itemize}
 
 \section{Combination of platforms}
-
 Another option would be to combine the two platforms. There are two ways to achieve this.
 One option is to connect the platforms using the I2C protocol. This can be achieved relatively
-simple using a breadboard, a resistor and 2 cables for each platform. The advantage of this
-approach is the fact that we can combine the two platforms and their respective modules as we please.
-The drawback would be
+simple using a breadboard, a resistor and 2 cables for each platform \Source. The
+advantage of this approach is the fact that we can combine the two platforms and their respective modules as we please.
+\fix{The drawback would be}{Missing sentence?}
 The second option is to use one platform with modules made for the other platform.
-This can be achieved by using a by using a special shield which  an NXT
-shield for the NXT. This would allow to have the customizability of the arduino
-while still being able to use the proprietary sensors from the NXT. However the
-NXT shield is limited as it only supports up to two motors. Another issue with
-using the arduino is the ability to build it into the product, as it is not
+This can be achieved by using a special shield for the NXT. This would allow to
+have the customizability of the arduino while still being able to use the proprietary sensors from the NXT. 
+However the NXT shield is limited as it only supports up to two motors \Source.
+Another issue with using the arduino is the ability to build it into the product, as it is not
 designed to be built into Lego as the NXT is.\nl
 
 \section{Platform comparison}
@@ -101,13 +101,14 @@ in conclusion a platform will be selected:
 \begin{enumerate}
   \item I/O ports - The Arduino wins, since not only does it far surpass
   the NXT in number of available ports, it also allows flexibility in
-  whether the ports are input or output and analog or digital.
+  whether the ports are input or output and analog or digital \Source.
   \item Processing power - When comparing the two platforms, the NXT is
-  superior. Although the Arduino offers a selection of boards with varying
+  superior. \fix{Although the Arduino offers a selection of boards with varying
   processors and memory, allowing us to select the arduino board that suits our
   needs best. In reality if one of the more powerful arduino boards is chosen,
   the difference between the platforms in processor-speed and memory would be
-  neglible.
+  neglible.}{Men vi har kun uno til rådighed og derfor kigger vi kun på den som
+  vi skriver længere oppe }
   \item Availability - The Arduino offers a far wider selection of peripherals
   than the NXT, although everything is produced by a 3rd party manufacturer. In
   reality, most of the modules needed for the project such as sensors are
@@ -133,6 +134,7 @@ Since the university provides the platforms the cost aspect isn't deemed as a
 vital factor. As mentioned before the parts needed for the project are
 available for both platforms so this is not the deciding factor either. When
 choosing the platform the group focused on the following criteria:
+
 \begin{itemize}
   \item Building - Since a physical turret will have to be constructed, in
   order to simplify the mechanical process and allowing further focus on the
@@ -142,9 +144,10 @@ choosing the platform the group focused on the following criteria:
   integration of modules is inconvenient.
   \item I/O Ports - the number of available I/O Ports needs to be able to
   support a range of sensors and some motors. For this reason the NXT is a
-  little limiting, compared to the arduino, although the use of a multiplexer
-  can allow expansion of existing ports.
+  little limiting, compared to the arduino, although the use of a
+  \fix{multiplexer}{What is it?} can allow expansion of existing ports.
 \end{itemize}
+
 In conclusion the group has chosen the Lego NXT platform for use in the project
 based on the following criteria:
 \begin{itemize}
