- Added a missing \  - Moved the fix to the right place

--- a/sections/Analyse/PlatformChoice.tex
+++ b/sections/Analyse/PlatformChoice.tex
@@ -39,8 +39,8 @@ of:
 
 The Lego NXT comes with the NXT-G programming environment which is a visual
 programming language for use with the NXT platform. There exist a variety of
-unofficial programming languages for the NXT, such as michael{leJOS(Java), RobotC(C), nxt-Python(Python-duhh)}
-which makes it possible to write programs using the more popular programming
+unofficial programming languages for the NXT, such as \michael{leJOS(Java),
+RobotC(C), nxt-Python(Python-duhh)} which makes it possible to write programs using the more popular programming
 languages \Source.
 
 \begin{itemize}
